k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-microservice
spec:
  selector:
    kubernetes.io/app: otus-microservice
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
