k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-microservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: otus-microservice
                port:
                  number: 8000
            path: /otusapp/(.*)/(.*)
            pathType: ImplementationSpecific
